Feature/29 get note (#38)
* :construction_worker:: 디버깅 가능하도록 설정

* :sparkles:: AI 서버와 연결 및 API 요청 기능 추가 #30

* :sparkles:: STT 결과 파싱 및 duration 설정

* :sparkles: : STT 결과 요청 api 메서드 변경

* :construction_worker:: 디버깅 가능하도록 설정

* :sparkles:: AI 서버와 연결 및 API 요청 기능 추가 #30

* :sparkles:: STT 결과 파싱 및 duration 설정

* :sparkles: : STT 결과 요청 api 메서드 변경

* :sparkles: : STT 결과 요청 api 메서드 변경

* :bug: : @EnableJpaAuditing 빠진 거 추가

* :sparkles:: get Note 구현

* :fire:: 미사용 코드라인 제거

* :fire:: 중복 라이브러리 import 제거

* :memo:: docker-compose.yaml, ErrorMessages.java 파일 수정

* :sparkles:: GenericJsonConverter 분할

* :bug:: 버그 수정

* :sparkles:: 누락된 기능 추가

- 노트나 폴더 POST 요청 시, 생성된 id response하도록 수정
- 노트 상태 조회 API 추가

* :sparkles:: AI 요약본 실제 값 출력하도록 교체

- 기존에 더미데이터 출력하던 로직에서 실제 summary 출력하도록 변경

* :memo:: api 문서 수정

---------
