# backend/src/main/java/bento/backend/dto/response/NoteDetailResponse.java
@@ -1,11 +1,10 @@
 package bento.backend.dto.response;
 
-import bento.backend.constant.SuccessMessages;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import jakarta.validation.constraints.NotBlank;
 import lombok.*;
 import java.util.List;
+import java.util.Map;
 
 
 @Getter
@@ -17,8 +16,9 @@ public class NoteDetailResponse {
 	private String createdAt;
 	private String duration;
 	private JsonNode content;
-
+	private List<String> topics;
+	private List<Map<String, String>> bookmarks;
+	private List<Map<String, String>> memos;
 	// TODO : AI 응답 형식 보고 수정 예정
-	// private List<String> speakers;
-	// private List<String> scripts;
+	private List<String> AI;
 }
